--- a/Formulario/Formulario/Base.lproj/Main.storyboard
+++ b/Formulario/Formulario/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="feS-DJ-fsg">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Usuario View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="UsuarioViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +16,157 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="MVB-wF-E1h">
+                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="yes"/>
+                                <connections>
+                                    <action selector="revisarFormulario:" destination="vXZ-lx-hvc" eventType="editingChanged" id="LXq-ql-l4X"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Apellido" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T2k-mP-YVr">
+                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="revisarFormulario:" destination="vXZ-lx-hvc" eventType="editingChanged" id="vPa-qB-kvu"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Telefono" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xc6-uu-Hg1">
+                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="186" id="iZQ-Zh-ZlR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="iZQ-Zh-ZlR"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="iZQ-Zh-ZlR"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="revisarFormulario:" destination="vXZ-lx-hvc" eventType="editingChanged" id="iM7-n6-XGE"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7DN-U9-3fJ">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Guardar">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="guardar:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="9iO-Jj-RBZ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7DN-U9-3fJ" firstAttribute="top" secondItem="xc6-uu-Hg1" secondAttribute="bottom" constant="24" id="4xc-FH-qWE">
+                                <variation key="widthClass=compact" constant="25"/>
+                            </constraint>
+                            <constraint firstItem="T2k-mP-YVr" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="91" id="7Fj-Ge-EDF">
+                                <variation key="widthClass=compact" constant="17"/>
+                            </constraint>
+                            <constraint firstAttribute="trailingMargin" secondItem="MVB-wF-E1h" secondAttribute="trailing" constant="91" id="KAo-ne-ioN">
+                                <variation key="widthClass=compact" constant="11"/>
+                            </constraint>
+                            <constraint firstItem="xc6-uu-Hg1" firstAttribute="top" secondItem="T2k-mP-YVr" secondAttribute="bottom" constant="21" id="Myt-Gr-fXY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xc6-uu-Hg1" secondAttribute="trailing" constant="91" id="NBJ-xe-sR4">
+                                <variation key="widthClass=compact" constant="11"/>
+                            </constraint>
+                            <constraint firstItem="T2k-mP-YVr" firstAttribute="top" secondItem="MVB-wF-E1h" secondAttribute="bottom" constant="18" id="Pgf-V2-T72"/>
+                            <constraint firstItem="xc6-uu-Hg1" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="91" id="VCU-yd-boe">
+                                <variation key="widthClass=compact" constant="17"/>
+                            </constraint>
+                            <constraint firstItem="MVB-wF-E1h" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="91" id="VXM-bt-H3h">
+                                <variation key="widthClass=compact" constant="17"/>
+                            </constraint>
+                            <constraint firstAttribute="trailingMargin" secondItem="T2k-mP-YVr" secondAttribute="trailing" constant="91" id="dvj-gu-wiG">
+                                <variation key="widthClass=compact" constant="11"/>
+                            </constraint>
+                            <constraint firstAttribute="trailingMargin" secondItem="7DN-U9-3fJ" secondAttribute="trailing" constant="81" id="jV5-En-0HU">
+                                <variation key="widthClass=compact" constant="116"/>
+                            </constraint>
+                            <constraint firstItem="MVB-wF-E1h" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="60" id="lWY-Q0-Bae"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="MVB-wF-E1h"/>
+                                <exclude reference="T2k-mP-YVr"/>
+                                <exclude reference="xc6-uu-Hg1"/>
+                                <exclude reference="7DN-U9-3fJ"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="KAo-ne-ioN"/>
+                                <exclude reference="VXM-bt-H3h"/>
+                                <exclude reference="lWY-Q0-Bae"/>
+                                <exclude reference="7Fj-Ge-EDF"/>
+                                <exclude reference="Pgf-V2-T72"/>
+                                <exclude reference="dvj-gu-wiG"/>
+                                <exclude reference="Myt-Gr-fXY"/>
+                                <exclude reference="NBJ-xe-sR4"/>
+                                <exclude reference="VCU-yd-boe"/>
+                                <exclude reference="4xc-FH-qWE"/>
+                                <exclude reference="jV5-En-0HU"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="MVB-wF-E1h"/>
+                                <include reference="T2k-mP-YVr"/>
+                                <include reference="xc6-uu-Hg1"/>
+                                <include reference="7DN-U9-3fJ"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="KAo-ne-ioN"/>
+                                <include reference="VXM-bt-H3h"/>
+                                <include reference="lWY-Q0-Bae"/>
+                                <include reference="7Fj-Ge-EDF"/>
+                                <include reference="Pgf-V2-T72"/>
+                                <include reference="dvj-gu-wiG"/>
+                                <include reference="Myt-Gr-fXY"/>
+                                <include reference="NBJ-xe-sR4"/>
+                                <include reference="VCU-yd-boe"/>
+                                <include reference="4xc-FH-qWE"/>
+                                <include reference="jV5-En-0HU"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="ZYT-zZ-46l"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="apellidoTextField" destination="T2k-mP-YVr" id="z2R-wA-sS3"/>
+                        <outlet property="botonGuardar" destination="7DN-U9-3fJ" id="xIZ-Qs-gQq"/>
+                        <outlet property="nombreTextField" destination="MVB-wF-E1h" id="Jes-3N-3qr"/>
+                        <outlet property="telefono" destination="xc6-uu-Hg1" id="Wlc-tx-zuk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2026.5" y="384"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="od8-Ug-Ahf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="feS-DJ-fsg" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gDZ-Ig-XXM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="afL-Tb-Hgb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i7D-7d-5sV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2026.5" y="-416"/>
         </scene>
     </scenes>
 </document>
